TrafficManagement/RequestTimeouts/rating-delay-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: poc-bbo
  name: ratings
spec:
  hosts:
    - ratings
  http:
    - fault:
        delay:
          percent: 100
          fixedDelay: 2s
      route:
        - destination:
            host: ratings
            subset: v1
