TrafficManagement/RequestTimeouts/review-timeOut-virtuals-services.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: poc-bbo
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v2
      timeout: 0.5s
